# rusty-bot

./: .gitignore  Cargo.toml  README.md  Ravedude.toml  avr-atmega328p-mac.json  avr-atmega328p.json  commands.txt  settings.back.json
.cargo/: config.toml
src/: m.back  main.rs  main.rs.back  main.rs.back.0
src/robot/: helper.rs  mod.rs
src/robot/flysky/: mod.rs
src/robot/ppm/: mod.rs
